--- a/pages/p2/951093.md
+++ b/pages/p2/951093.md
@@ -1,4 +1,4 @@
-### 瑞士或公开中共权贵秘密户口 江泽民在劫难逃(组图)
+### 涉黄会所开在公安局旁 徐州官场地震(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="瑞士有可能公开中共权贵在瑞士银行的秘密户口。" src="https://img2.secretchina.com/pic/2018/10-10/p2280152a320803681-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2017/12-3/p2045451a276362490-ss.jpg" style="height:336px; width:600px"/>
   <br>
-   瑞士有可能公开中共权贵在瑞士银行的秘密户口。（图片来源:Getty Images）
+   中共治下警匪一家，示意图。（图片来源: Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,103 +21,55 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【九評之二】評中國共產黨是怎樣起家的](http://141.164.51.119:10000/videos/news/../res/jiuping/index.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
-
-#### [ 🔥  尚未實現的2020預言--飢荒何時出現](http://141.164.51.119:10000/videos/news/starvation.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月14日讯】（看中国记者徐云枫综合报导）
+  【看中国2020年11月1日讯】江苏
   <strong>
-   美国
+   徐州
   </strong>
-  已就中共强行实施港版国安法破坏香港民主自由，实施制裁首批中港官员。据知情人披露，美国国务卿蓬佩奥，正试图游说各国支持冻结中共高官在境外的10万亿美元资产，有关款项或用于疫情赔偿。另有消息称，
+  曾轰动一时风月场所
   <strong>
-   瑞士
+   华商汇
   </strong>
-  有可能公开中共权贵在瑞士银行的秘密户口。中共高官在境外的资产，保守估计也在10万亿美元以上，其中
+  案，日前再被陆媒翻出。这个
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
-    江泽民
+   <span href="https://www.secretchina.com/news/gb/tag/涉黄会所" target="_blank">
+    涉黄会所
    </span>
   </strong>
-  家族控制了至少有1万亿美元的国家资产。
+  当时开在公安局旁，保护伞正是公安局。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/瑞士" target="_blank">
-    瑞士
-   </span>
-   或冻结中港权贵美元资产
-  </strong>
- </p>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  陆媒报导，在
+  <span href="https://www.secretchina.com/news/gb/tag/徐州" target="_blank">
+   徐州
   </span>
-  针对中港高官实施制裁之际，地处中欧的全球最大离岸金融中心瑞士也在酝酿重磅行动。
+  ，华商汇老板张三儿即张光明，可谓街知巷闻。张光明有五兄弟，自己排行老三，人称“张三儿”。一名内部人员透露，昔日华商汇纸醉金迷，夜夜笙歌，一次性消费几十万是家常便饭。
  </p>
  <p>
-  中共“港版国安法”引发国际反共浪潮，向来恪守中立原则的瑞士也向中共发出警告。瑞士外长卡西斯8月2日表示，中共侵犯人权事件日益增加，“正背离开放之路”，《港版国安法》影响“一国两制”落实。若中共政府坚持，西方国家誓将果断回应。
- </p>
- <p>
-  瑞士政府8月8日正式发布全民公投通告，将在11月举行公投，决定是否限制包括瑞士银行在内的瑞士企业，跟海外侵犯人权者往来做生意。倘若有关法例获得投票通过，瑞士企业在
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  <span href="https://www.secretchina.com/news/gb/tag/华商汇" target="_blank">
+   华商汇
   </span>
-  和香港的业务经营料会受到影响。
+  侧对面不到100米，坐落着徐州市公安局云龙湖风景名胜区分局。坊间流传“有人明目张胆地罩着张三儿”。
  </p>
  <p>
-  资深中国问题专家程翔接受《珍言真语》访问时，特别指出瑞士的反应不同寻常。他说：“我们知道瑞士是奉行中立政策近三百年。因为她是实行和奉行中立政策，所以她得以避过第一次世界大战和第二次世界大战。这个优良传统，也使得很多富豪，愿意将他们的钱放在瑞士。所以说难得的就是，瑞士的外长也在香港的问题上发声，谴责中共，等于放弃他们长久以来，奉行几百来的中立路线。”
+  2018年，张光明被抓，其主要保护伞之一，就是曾任云龙湖风景名胜区分局局长，沛县副县长、县公安局局长的曹为民。除了“罩着”张光明，曹为民还为另外一个涉黑组织头目王在清充当保护伞。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align: center;">
-  <img alt="资深中国问题专家程翔认为，瑞士的反应不同寻常。" src="https://img3.secretchina.com/pic/2020/8-10/p2750911a652077427-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   资深中国问题专家程翔认为，瑞士的反应不同寻常。（摄影：周秀文/看中国）
-  </br>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  他推断说：“这件事情，值得大家去探索的就是，既然他看到中共这个政权邪恶的一面，他会不会接着公布中共官员在瑞士的秘密户口。这件事情无独有偶，前几天有一个瑞士的报导，就是说大概有1000个中共的高官，集体拥有的财富有十几万亿（放在瑞士银行）。如瑞士真能够将这些秘密户口详情公布，如果国内老百姓知道，马上会造成强大民愤，来逼到中共内部催使共产党倒台。”
+  张光明与王在清在徐州“势均力敌”，当地的“娱乐产业”几乎都被二人掌控。
+ </p>
+ <p>
+  云龙湖风景区位于徐州城南，2000年起，随着景区的开发，林荫绿道旁，一座座会所拔地而起。这些会所背后，闪动着张光明与王在清的身影。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -132,9 +84,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   袁弓夷解释10万亿美金中共海外资产的来历
-  </strong>
+  2002年，张光明在徐州开了一家叫“忠国城”的会所。一名曾和张光明有过交集的人士表示，华商汇装修穷极奢华，出入其间的人，非富即贵，斜对面就是警察局，确实“扎眼”。在曹为民等人的“帮衬”下，这个会所生意红火，甚至山东、安徽、河南等周边省市的人都会来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -149,11 +99,7 @@
   </div>
  </center>
  <p>
-  正在美国进行游说促美宣布中共是犯罪集团的香港实业家袁弓夷8月12日向海外中文媒体爆料指，正在国外访问的美国国务卿蓬佩奥，正试图游说各国支持冻结中共高官在境外的资产，保守估计以10万亿美元计，有关款项可用于向中共追责隐瞒
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情的赔偿。
+  一名熟悉张光明和王在清的人士表示，张有点商业头脑，而王发家基本都靠裙带关系，纠集一帮亲信、小弟一起做事。2018年6月3日，张光明被抓后几天，王在清落网。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -168,7 +114,7 @@
   </div>
  </center>
  <p>
-  袁弓夷透露说：“美国方面在和其它盟国讨论，怎么冻结这些钱，把10万亿美金都冻结了，将来起码大部分可能用来赔偿病毒造成的损失。如果你要等中共给你拿钱，那你永远拿不到。第一，他们没钱了；第二，他们不肯给钱，那你就冻结他们在境外贪官的钱，包括中共的钱，看将来怎么分配，来赔偿全世界的损失。蓬佩奥到处飞、到处跑，跟他们讨论，这样就得到他们的支持。将来有钱分了，你明白吗？也就是蓬佩奥又硬又软，又有钱分给他们，也给他们压力，做了很多工夫。”
+  2004年，20多岁的王在清承包了徐州开元酒店的康体楼，开设夜总会和桑拿会所，非法从事色情交易。2008年前后，他在徐州市泉山区、云龙区，河南开封等地组织卖淫。2009年12月，王在清注册成立江苏丰疆投资有限公司，后变更为江苏丰疆控股集团有限公司，将涉黄产业、娱乐产业和“内保”置于丰疆集团管理之下。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -183,7 +129,7 @@
   </div>
  </center>
  <p>
-  袁弓夷解释这10万亿美金资产的数据，他说，前美国中央情报局职员斯诺登（Edward Snowden）7年前匿港时，曾说中国出逃资金有4万8000亿美金，“通过洗钱的办法，或者直接去中国人民银行那里换，他们给人民币，就换出这些外汇出来，比如当时中国要‘走出去’，他们利用这个机会顺势走出去，有的说要投资‘一带一路’，借用这些东西走出去。这是七年前，之后又起码走了同样这么多钱，所以加起来有10万亿，全部都是有依据的。”
+  据报，丰疆集团对外声称经营煤炭生意，实际上是王在清洗钱、打通政商关系的皮包公司。2017年，王在清以丰疆集团的名义，在徐州市开设了开元颐和桑拿洗浴中心、开元鼎秀会、海天云怡宫、海天净尘等娱乐会所。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -198,7 +144,7 @@
   </div>
  </center>
  <p>
-  袁弓夷还说，大约10万亿美金资产中，占最大份的是前中共党魁江泽民家族的，海外资金大约有1万亿美元。
+  “所有人都知道这些地方从事卖淫赌博吸毒活动，也有人举报过，不过每次警察去查，都走一个过场，没有查出问题。”一名熟悉情况的当地人说，“看似王在清跟张三儿是竞争关系，其实两人私下交好，也曾出现在同一饭局上，真的是‘一山可容二虎’。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -213,7 +159,7 @@
   </div>
  </center>
  <p>
-  他说：“你想想，江家真是控制了中国30年啊，由89六四开始就是江家了，那到了97年邓小平死了，权力全部交给他了。一直夺权，江家的势力一路一路进去，不只是在上海，整个中国都有势力，（包括）最好、最容易赚钱的，三家通讯公司，上海那么多银行。”
+  2008年至2018年，王在清卖淫网络中超过百名失足女，为其非法获利1.2亿元，为江苏地区近年来规模最大的卖淫集团。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -228,9 +174,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   江泽民家族控制至少有1万亿美元的国家资产
-  </strong>
+  知情人士透露，张光明与曹为民相识已久，张称曹为“大哥”。张光明跟当地其他警界人物，也是称兄道弟。凡是到华商汇来的当地警界人员，公安局副局长级别及以上的，全部免单，并被带到一个封闭隐私的VIP空间玩乐。该知情人士透露，曹为民曾有吸毒史，而他吸毒的场所均在张光明与王在清的会所。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,7 +189,67 @@
   </div>
  </center>
  <p>
-  据流亡美国的大陆富豪郭文贵2019年4月爆料，江泽民家族控制的国家资产至少有1万亿美元，洗白的资金高达5000亿美元。江家是世界隐形首富，富可敌国。
+  有曹为民等人的庇护，张光明与王在清的非法场所屡次被查都能平安无事。曹为民甚至在会议上，当着不少所长的面，声称不能随意去查王在清的场子。有一次，有警察去检查开元酒店的消防，回来后被曹为民骂得狗血淋头。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  曾与曹为民一同参加过饭局的人回忆，一次晚宴曹为民晚到，带着几个胳膊纹龙画虎的大汉进来。刚喝了几杯，曹为民突然彪出一句：“听说北京那边的小妮子可俊了，哪天我们去玩玩。”当时，在座的不了解曹为民的几人都懵了，想不到一个公安局局长嘴里句句不离玩乐之事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  当地人称，曹为民的司机全身纹身，据说是开元酒店“鸡头”介绍给曹为民的，不仅给曹为民开车，还鞍前马后全权负责曹的其他娱乐活动。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2017年3月，曹为民调任徐州沛县副县长兼公安局局长，“人走茶不凉”，曹利用昔日权力，拉拢接替其担任云龙湖风景名胜区分局局长的李勇军，继续为张、王编织关系网。而张、王对“曹大哥”也是感激不尽，随叫随到，满足曹的各种需求。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对于云龙湖风景名胜区分局湖北路派出所原所长李诗涛来说，王在清位于“理想国际”公寓楼的“指挥部”就在自己眼皮底下。曹为民任云龙湖风景名胜区分局局长时，多次给李诗涛送钱和购物卡，让其关照王在清。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -264,7 +268,7 @@
   </ins>
  </center>
  <p>
-  而2020年在福布斯富豪榜上，亚马逊创办人贝索斯蝉联全球首富，身家达1130亿美金。上榜富豪榜单上有2095名亿万富翁，财富总额为8万亿美元。
+  “曹大哥”的关系网，自然不是白白为张、王二人搭建的。为打点关系，每逢春节，张、王二人都要向会所辖区派出所领导送价值上百万的礼品。为了满足某些领导的猎奇癖，张光明曾安排下属送鹤天珠和用纯金镀过的虎爪。鹤天珠要用生切下来的丹顶鹤头制作，十分血腥。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -279,7 +283,7 @@
   </div>
  </center>
  <p>
-  中共“港版国安法”引发国际反共浪潮，地处中欧的全球最大离岸金融中心瑞士也在酝酿重磅行动。瑞士政府8月8日正式发布全民公投通告，将在11月举行公投，决定是否限制包括瑞士银行在内的瑞士企业，跟海外侵犯人权者往来做生意。倘若有关法例获得投票通过，瑞士企业在中国和香港的业务经营料会受到影响。
+  2018年，一起偶然的事件，将张光明送入绝境，其身后的保护伞随之被揭开。其弟张光耀的拜把兄弟张学文，在某非法赌场玩老虎机输了，一气之下砸坏了赌场的游戏机。赌场老板抽了张学文一耳光，张学文仗着兄弟撑腰，不断向赌场老板讹钱。迫不得已，赌场老板只好报警，张学文被抓后，才发现昔日酒桌兄弟没人靠得住。张学文检举了一名叫程杰的黑社会老大，程杰被抓后，又实名举报了张光明。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -294,7 +298,7 @@
   </div>
  </center>
  <p>
-  资深中国问题专家程翔接受访问时表示，前几天有一个瑞士的报导，就是说大概有1000个中共的高官，集体拥有的财富有十几万亿放在瑞士银行。如瑞士真能够将这些秘密户口详情公布，如果国内老百姓知道，马上会造成强大民愤，来逼到中共内部催使共产党倒台。
+  张光明被捕之后，他的兄弟们也被羁押。几天后，王在清落网。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -309,7 +313,7 @@
   </div>
  </center>
  <p>
-  另据亲北京背景的《南华早报》报导，中南海重要顾问、中国社科院学部委员余永定日前称，中美双方的金融纠纷一触即发，美国不仅可以制裁中国银行，还可以扣押中国（中共）的海外资产。
+  一名当地官员称，张、王黑恶势力覆灭后，引发徐州公安系统地震。2018年8月25日，曹为民在沛县公安局会议现场，被江苏省纪委工作人员带走。不久之后，李勇军在办公室睡午觉，在众目睽睽之下被办案人员带走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -324,7 +328,7 @@
   </div>
  </center>
  <p>
-  余永定说，一种可能的情况是美国对中国银行实施制裁，就如美国在2012年制裁昆仑银行，称后者与伊朗有石油交易，并将昆仑银行踢出美元结算体系，扼杀其跨境业务。但禁止中国银行与美国金融系统打交道只是美国在金融领域对中国（中共）施加痛苦的众多方式之一。余永定表示，“金融制裁的形式可以多种多样，针对银行或某些行业。”
+  张、王的“保护伞”还有。去年2月，徐州市云龙区区委原书记方正华落马，他曾出面为王在清在租房、贷款等方面作担保，致使国有资产损失达788万。方正华因犯受贿罪、滥用职权罪被判处有期徒刑六年，并处罚金人民币二十万元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -339,7 +343,7 @@
   </div>
  </center>
  <p>
-  余永定警告，如果冲突爆发，美国可以扣押中国（中共）的海外资产。“不排除这种可能性。”“我们真的很难预料接下来会发生什么。”
+  半年后，徐州市国土资源局党组书记、局长李钢因涉嫌贪污、受贿、滥用职权被捕。李钢曾“协调”退回王在清无力开发的一块地皮的土地出让金，还多退了“补偿金”。之后，王在清送给李钢10万元港币和5万元购物卡。李钢33岁就当上徐州市国土资源局副局长，知情人士透露，在他出事之前，官场上已有他即将被提拔为任副市长的风声。而华商汇所租用的场所为徐州体育局的公共场所，徐州体育局的涉事人员亦被调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -354,7 +358,7 @@
   </div>
  </center>
  <p>
-  上周，美国对中共和香港11名官员实施了制裁，除了香港特首林郑月娥外，还包括中共国务院港澳办主任夏宝龙，香港警务处处长邓炳强等。制裁名单中的官员在美国的财产和资产将被冻结。
+  中共治下警匪一家，其实江苏徐州这宗事，只是冰山一角。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -386,7 +390,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -418,13 +422,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/942945.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/942945.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/942945.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/14/942945.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951093.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951093.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/951093.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951093.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/942945.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/951093.md' width='0px' height='0px'/>
