--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -1,4 +1,4 @@
-### 【大选更新】 各州陆续开票
+### 【大选更新】 川普赢佛州 拜登赢纽约
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -71,6 +71,79 @@
 <h4>
  以下是美国大选日各州投票情况的实时更新（以下时间为美东时间）：
 </h4>
+<h3>
+ 10:08 四州晚上10点投票结束
+</h3>
+<p>
+ 晚上10点投票结束的四个州是：
+</p>
+<p>
+ 爱荷华州
+ <br/>
+ 蒙大拿
+ <br/>
+ 内华达州
+ <br/>
+ 犹他州
+</p>
+<h3>
+ 22:04 华尔街日报预测川普拿下堪萨斯，共获得138张选举人票
+</h3>
+<p>
+ 川普赢得总数138张选举人票：
+ <br/>
+ 堪萨斯（6）、南达科他（3）、路易斯安那（8）、怀俄明（3）、内布拉斯加（3）、北达科他（3）、佛罗里达（29）、密苏里（10）、阿肯色（8）、田纳西（11）、俄克拉荷马（7）、密西西比（6）、阿拉巴马（9）、南卡罗来纳（9）、西弗吉尼亚州（5）、印第安纳（11）、缅因（1）
+</p>
+<p>
+ 拜登赢得总数132张选举人票：
+ <br/>
+ 科罗拉多（9）、纽约（29）、新墨西哥（5）、罗德岛（4）、新泽西（14）、马里兰（10）、马萨诸塞（11）、伊利诺伊（20）、特拉华（3）、康涅狄格（7）、佛蒙特（3）、弗吉尼亚（13）、华盛顿哥伦比亚特区（3）、缅因（1）
+</p>
+<h3>
+ 10:02 南卡罗来纳州共和党籍参议员赢得连任
+</h3>
+<p>
+ 南卡罗来纳州共和党籍资深参议员林赛·格雷厄姆（Lindsey Graham）赢得连任。
+</p>
+<h3>
+ 22:00 关键州俄亥俄开票进展
+</h3>
+<p>
+ 关键州俄亥俄开票进展74%，川普扩大领先范围，领先12.5万张选票。
+</p>
+<p>
+ 川普获得50.6%的投票率，总数222万张选票。拜登获得48%的投票率，总投票数为211万张
+</p>
+<p>
+ 俄亥俄州有18张选举人票，川普曾在2016年以微弱优势拿下该州。
+</p>
+<h3>
+ 21:44 关键州俄亥俄开票进展
+</h3>
+<p>
+ 关键州俄亥俄开票进展70%，川普首次反超拜登2万3千张投票。
+</p>
+<p>
+ 俄亥俄州有18张选举人票，川普曾在2016年以微弱优势拿下该州。
+</p>
+<h3>
+ 21:38 川普赢得内布拉斯加州
+</h3>
+<p>
+ 据美联社预计，共和党总统候选人和现任总统川普在大选中赢得了内布拉斯加州。内布拉斯加州共有5张选举人票。
+</p>
+<p>
+ 内布拉斯加州给全州优胜者两票，并按国会选区分配其余三票。到目前为止，川普在该州赢得了三张选举人票。截至晚上9:17 周二，两张选举人票仍未分配。
+</p>
+<p>
+ 内布拉斯加和缅因州是不用“胜者全得制”（the winner-takes-all）的两个州，其余48州和华盛顿特区采用此制度，即把本州的选举人票全部给予在该州获得相对多数选票的总统候选人。
+</p>
+<h3>
+ 21:17 拜登赢得科罗拉多 又得9张选举人票
+</h3>
+<p>
+ 拜登拿下科罗拉多，获得该州9张选举人票，目前共有131张。
+</p>
 <h3>
  21:00 川普拜登票数统计
 </h3>
