--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -1,4 +1,4 @@
-### 【国会大选更新】参院席位决出2/3 两党打成平手
+### 【国会大选更新】参院决出23席位 两党打成平手
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -50,50 +50,6 @@
  以下是美国参众两院的计票结果更新（美东时间）：
 </p>
 <p>
- <span style="font-weight: 400;">
-  0：25
- </span>
-</p>
-<p>
- <span style="font-weight: 400;">
-  在艾奥瓦州，计票工作已经完成近90%。共和党现任参议员乔尼·恩斯特（Joni Ernst）得票超过51.9%，预计将赢得她的第二个任期。
- </span>
-</p>
-<p>
- <span data-sheets-userformat='{"2":14851,"3":{"1":0},"4":[null,2,16777215],"12":0,"14":[null,2,2240314],"15":"Arial, Helvetica, sans-serif","16":12}' data-sheets-value='{"1":2,"2":"恩斯特为爱奥华州第一位女性联邦参议员，民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的格林菲尔德（Theresa Greenfield）挑战恩斯特。"}'>
-  恩斯特为艾奥瓦州第一位女性联邦参议员。民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的特蕾莎·格林菲尔德（Theresa Greenfield）发起挑战。
- </span>
-</p>
-<p>
- 23：57
-</p>
-<p>
- <span style="font-weight: 400;">
-  维吉尼亚州北临美国政治中心华盛顿哥伦比亚特区，该州是美利坚合众国的发源地之一，人口稠密，经济发达。该州拥有11个众议院国会选区，其中7个民主党人 ，4 个共和党人。
- </span>
-</p>
-<p>
- <span style="font-weight: 400;">
-  2020年美国
-  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89.html">
-   大选
-  </ok>
-  日，维吉尼亚州选情胶着。
- </span>
-</p>
-<p>
- <span style="font-weight: 400;">
-  在11个国会选区中，共和党在第九选区获胜；第一、第六选区处于领先；第五选区翻盘小胜。其它选区民主党暂时领先。
- </span>
-</p>
-<p>
- 目前，参议员竞争极为激烈，民主党的马克·渥纳尔（Mark Warner）略占优势，高出共和党人丹尼尔·
- <b>
-  加德(
- </b>
- Daniel Gade)3百多票 。
-</p>
-<p>
  23：55
 </p>
 <p>
@@ -106,10 +62,7 @@
  而共和党赢得14个席位，分别是肯塔基州、南卡州、田纳西州、阿拉巴马州、阿肯色州、俄克拉荷马州、德州、内布拉斯加州、怀俄明州、南达科他州、西维吉尼亚州、密西西比州、堪萨斯州、爱达荷州。这些州中13个州原本都是共和党人把持，目前只有阿拉巴马州翻盘成功。
 </p>
 <p>
- 目前参议院共和党和民主党各自翻盘一席，打成平手。
-</p>
-<p>
- 众议院方面，民主党获得143席，共和党获150席，还有142席待决。
+ 目前共和党和民主党各自翻盘一席，打成平手。
 </p>
 <p>
  23：20
@@ -172,7 +125,11 @@
   <img alt="" class="size-large wp-image-12524038" src="https://i.epochtimes.com/assets/uploads/2020/11/Screen-Shot-2020-11-03-at-10.22.06-PM-600x413.png"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  截至11月3日晚10点20分，开票结果显示，共和党在国会大选所获席位均领先于民主党。（大纪元图片）
+  截至11月3日晚10点20分，开票结果显示，共和党在国会
+  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89.html">
+   大选
+  </ok>
+  所获席位均领先于民主党。（大纪元图片）
  </figcaption><br/>
 </figure><br/>
 <p>
