--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -1,4 +1,4 @@
-### 【国会大选更新】参院席位决出2/3 两党打成平手
+### 【国会大选更新】参院决出26席位 两党选情胶着
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -50,9 +50,35 @@
  以下是美国参众两院的计票结果更新（美东时间）：
 </p>
 <p>
- <span style="font-weight: 400;">
-  0：25
- </span>
+ 1：51
+</p>
+<p>
+ 路易安那州共和党参议员比尔·卡西迪（Bill Cassidy），以1,228,661张选票（59.3%得票率）战胜了两位民主党挑战者艾德里安·帕金斯（Andrian Perkins）和德里·爱德华兹，获得连任。他的对手帕金斯和爱德华兹分别赢得了393，866张选票（19%的得票率）和229,698张选票（11.1%的得票率）。
+</p>
+<p>
+ 1：48
+</p>
+<p>
+ 新墨西哥州民主党候选人本·鲁扬（ Ben Lujan）赢得了该州的参议员席位。
+</p>
+<p>
+ 1：30
+</p>
+<p>
+ 乔治亚州共和党参议员大卫·珀杜（David Perdue）赢得2,258,818张选票（52.5%得票率）获得连任；其对手民主党候选人乔恩·奥索夫（Jon Ossoff）赢得1,942,576张选票（45.2%得票率）。
+</p>
+<p>
+ 据福克斯新闻网报导，大卫·珀杜是川普政府的农业部长桑尼·珀杜（Sonny Perdue）的表弟，大卫还是川普总统的一位亲密盟友。他曾是一家财富五百强公司的首席执行官，而且令曾陷入困境的美国知名连锁店Dollar General股价翻了一番，而且又重新开了2,600家新店。他还有12年的管理顾问的经历。
+</p>
+<p>
+ 该州的另一组参议员选举中，民主党参议员候选人拉斐尔·沃诺克（Raphael Warnock）和凯利·洛夫勒（Kelly Loeffler）和位于第三名的道格·柯林斯（Doug Collins）都没有赢得50%的得票率，因此需要明年1月的特别选举，再决一雌雄。分析人士表示，在此次
+ <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89.html">
+  大选
+ </ok>
+ 中，柯林斯和洛夫勒分散了共和党的票仓，否则共和党取胜的可能性很大。
+</p>
+<p>
+ 0：25
 </p>
 <p>
  <span style="font-weight: 400;">
@@ -74,11 +100,7 @@
 </p>
 <p>
  <span style="font-weight: 400;">
-  2020年美国
-  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89.html">
-   大选
-  </ok>
-  日，维吉尼亚州选情胶着。
+  2020年美国大选日，维吉尼亚州选情胶着。
  </span>
 </p>
 <p>
