--- a/pages/nsc412/n12518740.md
+++ b/pages/nsc412/n12518740.md
@@ -1,4 +1,4 @@
-### 【大选更新】 四个关键摇摆州结果未定
+### 【大选更新】 川普：我赢了 拜登自信能赢
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -71,6 +71,75 @@
 <h4>
  以下是美国大选日各州投票情况的实时更新（以下时间为美东时间）：
 </h4>
+<h3>
+ 2:21 川普:我们赢了大选
+</h3>
+<p class="p3">
+ <span class="s1">
+  川普在白宫讲话说，这次选举他已经大赢。他还说民主党想窃取选举成果，
+ </span>
+ <span class="s2">
+  “
+ </span>
+ <span class="s1">
+  一群人想剥夺另外一群人的权利，我们是不会允许的。
+ </span>
+ <span class="s2">
+  ”
+  <span class="s1">
+   “
+  </span>
+  <span class="s2">
+   这是对美国公众的欺诈。
+  </span>
+  <span class="s1">
+   ”
+  </span>
+ </span>
+</p>
+<p class="p3">
+ <span class="s1">
+  川普说，
+ </span>
+ <span class="s2">
+  “
+ </span>
+ <span class="s1">
+  我们在佛罗里达大赢
+ </span>
+ <span class="s2">
+  ”
+ </span>
+ <span class="s1">
+  ，
+ </span>
+ <span class="s2">
+  “
+ </span>
+ <span class="s1">
+  前所未有的这么多选民投票
+ </span>
+ <span class="s2">
+  ”
+ </span>
+ <span class="s1">
+  。他还说，我们赢了德克萨斯、乔治亚、北卡罗来纳、宾州、密歇根和威斯康辛州。
+ </span>
+</p>
+<p class="p3">
+ <span class="s1">
+  川普总统还感谢了第一夫人、家人和副总统彭斯。
+ </span>
+</p>
+<h3>
+ 2:14 川普将很快在白宫讲话
+</h3>
+<p>
+ CNN报导，预计川普总统不久将在白宫东厅讲话。
+</p>
+<p>
+ 他较早发推文说他会发表声明。
+</p>
 <h3>
  1:50 关键摇摆州开票情况
 </h3>
