--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -50,10 +50,42 @@
  以下是美国参众两院的计票结果更新（美东时间）：
 </p>
 <p>
- 1：51
+ 2：40
 </p>
 <p>
- 路易安那州共和党参议员比尔·卡西迪（Bill Cassidy），以1,228,661张选票（59.3%得票率）战胜了两位民主党挑战者艾德里安·帕金斯（Andrian Perkins）和德里·爱德华兹，获得连任。他的对手帕金斯和爱德华兹分别赢得了393，866张选票（19%的得票率）和229,698张选票（11.1%的得票率）。
+ 亚利桑那州已经开出80%选票，民主党挑战者、前宇航员马克·凯利（Mark Kelly）目前处于领先地位，有望翻盘成功，获得参议院一席。
+</p>
+<p>
+ 凯利一直以来与中共关系密切。共和党人指责他严重依赖中国。
+</p>
+<p>
+ 2：25
+</p>
+<p>
+ 密歇根州目前已统计出65%的选票，共和党参议员候选人约翰·詹姆斯（John James）赢得1,984,277张票（53.6%得票率），比争取连任的民主党参议员加里·彼得斯（Gary Peters）高出30多万张，彼得斯赢得了1,646,895张选票（44.5%得票率）。
+</p>
+<figure class="wp-caption aligncenter" id="attachment_12524643" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229425471-John-James-R-MI.jpg">
+  <img alt="" class="size-large wp-image-12524643" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229425471-John-James-R-MI-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年11月2日，在密歇根州特拉弗斯城，美国共和党参议员候选人约翰·詹姆斯（John James）（右）在川普竞选集会上发言。(Photo by Rey Del Rio/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 詹姆斯是底特律的一位商人，曾担任过空军直升机飞行员，他曾经于2018年作为共和党新星参选，结果失利。而今年他则有望取胜。
+</p>
+<p>
+ 2：01
+</p>
+<p>
+ 路易安那州共和党参议员比尔·卡西迪（Bill Cassidy），以1,228,661张选票（59.3%得票率）战胜了两位民主党挑战者艾德里安·帕金斯（Andrian Perkins）和德里·爱德华兹，获得连任。他的对手帕金斯和爱德华兹分别赢得了393,866张选票（19%的得票率）和229,698张选票（11.1%的得票率）。
+</p>
+<p>
+ 卡西迪对他再次当选感到开心，他对WWNO记者说：“民主党的政纲是增收更高的税收、增加更多的规章制度，换一句话就是给民众更少的自由，我们共和党的政纲是减税、更少的规章制度，换而言之就是给予民众自由。”
+</p>
+<p>
+ 他还对支持他的民众说：“我对你们及乡亲们承诺，我会继续尽我所能为这个国家的人民工作，为我们州的人工作，令我们的国家和我们州现在更加美好。”
 </p>
 <p>
  1：48
@@ -81,14 +113,13 @@
  0：25
 </p>
 <p>
- <span style="font-weight: 400;">
-  在艾奥瓦州，计票工作已经完成近90%。共和党现任参议员乔尼·恩斯特（Joni Ernst）得票超过51.9%，预计将赢得她的第二个任期。
- </span>
+ 在艾奥瓦州，计票工作已经完成近90%。共和党现任参议员乔尼·恩斯特（Joni Ernst）得票超过51.9%，预计将赢得她的第二个任期。
 </p>
 <p>
- <span data-sheets-userformat='{"2":14851,"3":{"1":0},"4":[null,2,16777215],"12":0,"14":[null,2,2240314],"15":"Arial, Helvetica, sans-serif","16":12}' data-sheets-value='{"1":2,"2":"恩斯特为爱奥华州第一位女性联邦参议员，民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的格林菲尔德（Theresa Greenfield）挑战恩斯特。"}'>
-  恩斯特为艾奥瓦州第一位女性联邦参议员。民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的特蕾莎·格林菲尔德（Theresa Greenfield）发起挑战。
- </span>
+ 恩斯特为艾奥瓦州第一位女性联邦参议员。民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的特蕾莎·格林菲尔德（Theresa Greenfield）发起挑战。在艾奥瓦州，计票工作已经完成近90%。共和党现任参议员乔尼·恩斯特（Joni Ernst）得票超过51.9%，预计将赢得她的第二个任期。
+</p>
+<p>
+ 恩斯特为艾奥瓦州第一位女性联邦参议员。民主党今年也派出了另一名女性候选人，有“农场小孩（farm kid）”之称的特蕾莎·格林菲尔德（Theresa Greenfield）发起挑战。
 </p>
 <p>
  23：57
