--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年11月03日讯】（大纪元记者林燕、李言、戴芙若、张婷、徐简报导）2020年11月3日（周二），美国举行第59届总统选举，众议院全部的435个席位及参议院中的35个席位也要进行改选，将产生第117届美国国会。
+ 【大纪元2020年11月03日讯】（大纪元记者林燕、李言、戴芙若、张婷报导）2020年11月3日（周二），美国举行第59届总统选举，众议院全部的435个席位及参议院中的35个席位也要进行改选，将产生第117届美国国会。
 </p>
 <h3 style="text-align: center;">
  总统选举
@@ -71,25 +71,6 @@
 <h4>
  以下是美国大选日各州投票情况的实时更新（以下时间为美东时间）：
 </h4>
-<h3>
- 4:10美国
- <ok href="https://www.epochtimes.com/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.html">
-  总统大选
- </ok>
- 结果 BBC分析未来三种走向
-</h3>
-<p>
- BBC报导，由于大选结果没有最后出来，可能会有三种情况发生。
-</p>
-<p>
- 1.在接下来的几天，外界可能都不知道最终结果。 目前密歇根州、威斯康星州和宾夕法尼亚州等地还没有计算邮寄票数。
-</p>
-<p>
- 2.川普总统说要由最高法院来判断选举结果， 这意味着可能要花几周的时间，才有结论。
-</p>
-<p>
- 3.选举的不确定性可能带来动荡，有许多美国人谈到了他们的担忧。
-</p>
 <h3>
  3:08众议院共和党人再增两个席位
 </h3>
@@ -402,7 +383,11 @@
    22：56 美国驻华使馆发推说大选
   </h3>
   <p>
-   美国驻华使馆在美东时间周二晚上10：50发表推文谈到正在进行的美国总统大选投票。
+   美国驻华使馆在美东时间周二晚上10：50发表推文谈到正在进行的美国
+   <ok href="https://www.epochtimes.com/gb/tag/%E6%80%BB%E7%BB%9F%E5%A4%A7%E9%80%89.html">
+    总统大选
+   </ok>
+   投票。
   </p>
   <blockquote class="twitter-tweet">
    <p dir="ltr" lang="zh">
