--- a/pages/nf4514/n12523578.md
+++ b/pages/nf4514/n12523578.md
@@ -1,4 +1,4 @@
-### 【国会大选更新】参院决出28席位 选情胶着
+### 【国会大选更新】参院决出27席位 两党选情胶着
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -50,27 +50,6 @@
  <strong>
   以下是美国参众两院的计票结果更新（美东时间）：
  </strong>
-</p>
-<p>
- 6：22
-</p>
-<p>
- 北卡罗来纳州的选情已成为这次美国参议院选举的最大看点之一， 共和党参议员汤姆·提利斯（Thom Tillis）宣布获胜，取得连任。
-</p>
-<p>
- 民主党民主党人卡尔·坎宁安（Cal Cunningham）在几个月的竞选活动本来一直领先，但是性丑闻导致他名声狼藉, 使得本来充满悬念的选情出现了戏剧性变化。
-</p>
-<p>
- 此前媒体分析，这一席位花落谁家或将决定民主当和共和党谁能控制参议院。
-</p>
-<p>
- 5：42
-</p>
-<p>
- 在缅因州，已经连任三次的共和党参议员苏珊·柯林斯（Susan Collins）跟缅因州众议会议长莎拉‧吉迪恩（Sara Gideon）进行争夺，在缅因州的法律规定下，如果没有候选人获得超过50％的选票，选民的第二选择可以被考虑。
-</p>
-<p>
- 柯林斯担任参会拨款委员会（Senate Appropriations Committee）委员，她先前支持将联邦经费挪用于“薪资保护贷款灵活法案”（PPP），也曾投票反对任命巴雷特（Amy Coney Barrett）当大法官。
 </p>
 <p>
  4：36
