--- a/pages/nf4514/n12518740.md
+++ b/pages/nf4514/n12518740.md
@@ -72,6 +72,46 @@
  以下是美国大选日各州投票情况的实时更新（以下时间为美东时间）：
 </h4>
 <h3>
+ 7:39 西雅图示威者与警方冲突，至少八人被捕
+</h3>
+<p>
+ 这次美国大选前夕，不少地方政府担心投票结果会引发暴力事件，纷纷加强防备。周三，西雅图警方说有示威者堵路并在公路上撒铁钉，双方发生肢体冲突，至少八人被捕。
+</p>
+<p>
+ BBC报导，有的示威者拿着“黑人的命也是命”（Black Lives Matters）的横幅，防暴警察在市中心追逐他们。
+</p>
+<p>
+ 西雅图警察局称至少逮捕八人，他们分别涉嫌阻路、袭击警察、鲁莽驾驶等罪行。警方还说有人在路上撒钉子，也有人砸坏路边停车收费机。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Two marches are currently moving through the S. Lake Union and Capitol Hill areas. One from Cascade Park–south on Fairview/Harrison–while another is leaving Cal Anderson Park, headed west on Denny and Summit. Please use caution if travelling in these areas.
+ </p>
+ <p>
+  — Seattle Police Dept. (@SeattlePD)
+  <ok href="https://twitter.com/SeattlePD/status/1323841487843459073?ref_src=twsrc%5Etfw">
+   November 4, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
+ 6:47 欧洲领导人对美国大选的反应
+</h3>
+<p>
+ 很多欧洲领导人认为，这次选举让欧洲更加意识到，要把“命运掌握在自己手中”。
+</p>
+<p>
+ 周三上午，德国国防部长康坎鲍尔（AnnegretKramp-Karrenbauer ）形容美国的局势是“爆炸性”的，担忧美国可能陷入宪政危机。
+</p>
+<p>
+ 比利时前总理盖伊·霍夫施塔特（Guy Verhofstadt）说，要把“命运掌握在自己手中”，法国的欧洲部长表示，不能依靠美国大选的结果来决定欧洲的命运。
+</p>
+<p>
+ 川普总统在四年任期中，在外交、贸易、安全、技术，气候等方面对美欧关系进行了巨大改变。
+</p>
+<h3>
  5:25 大选结果未定 美国股市波动
 </h3>
 <p>
